# peca-p2p-yp

./: .gitignore  .gitleaks.toml  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  skills-lock.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
contrib/systemd/: peca-p2p-yp.service
docs/adr/: 0001-security-scanning-tools.md  0002-event-schema-nip-scope.md  0003-persona-key-management.md  0004-threat-model.md  0005-gossip-formal-verification.md  0006-unencrypted-transport.md  0007-license.md  0008-dual-stack-p2p-bind.md  0008-linux-key-protection.md  0009-linux-key-protection.md  0010-dns-manual-peer.md  0011-broadcasting-lock.md  0012-index-txt-lan-exposure.md  0013-pex-benign-rejection.md  0014-livechat-thread.md  release-gate-check-2026-07-04.md  security-review-checklist.md
docs/agents/: domain.md
docs/formal/: README.md  gossip_propagation-result.md  gossip_propagation.cfg  gossip_propagation.tla  livechat_sequencer.cfg  livechat_sequencer.tla
docs/research/: winny2-bbs.md
specs/001-nostr-p2p-yp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-nostr-p2p-yp/checklists/: interop.md  p2p.md  requirements.md  security.md
specs/001-nostr-p2p-yp/contracts/: http-yp.md  local-api.md  nostr-events.md  p2p-gossip.md  pcp-announce.md
specs/002-linux-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-linux-support/checklists/: requirements.md  security.md
specs/002-linux-support/contracts/: cli-config.md  key-envelope.md  systemd-service.md
specs/003-persona-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-persona-selection/checklists/: api.md  requirements.md  security.md
specs/003-persona-selection/contracts/: local-api.md
specs/004-lan-index-txt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-lan-index-txt/checklists/: requirements.md  security.md
specs/004-lan-index-txt/contracts/: index-txt-lan.md
specs/005-pex-self-reject/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-pex-self-reject/checklists/: requirements.md  (+1 more)
specs/006-livechat-thread/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: broadcast.rs  config.rs  lib.rs  main.rs
src/event/: livechat.rs  mod.rs  publish.rs  schema.rs  store.rs  view.rs
src/identity/: mod.rs
src/livechat/: board.rs  host.rs  manager.rs  mod.rs  moderation.rs  participant.rs  registry.rs  session.rs  thread.rs
src/p2p/: frame.rs  hub.rs  ingest.rs  mod.rs  peers.rs  pex.rs  runtime.rs  session.rs  sync.rs  upnp.rs
src/pcp/: atom.rs  channel.rs  mod.rs  session.rs
src/platform/: mod.rs
src/security/: mod.rs
src/store/: mod.rs  schema.sql
src/web/: announced.rs  channels.rs  livechat.rs  mod.rs  mutes.rs  peers.rs  personas.rs  settings.rs
src/yp/: index_txt.rs  mod.rs
tests/: cucumber.rs
tests/common/: announcer.rs  livechat_host.rs  log_capture.rs  mock_peer.rs
tests/contract/: cli_config.rs  compat_bbs.rs  event_30311.rs  event_validation.rs  gossip_frames.rs  index_txt.rs  key_envelope.rs  local_api.rs  pcp_handshake.rs  pex.rs  thread_delivery.rs  thread_events.rs
tests/features/: livechat.feature  outbound_only.feature  persona_selection.feature  security.feature  us1_announce.feature  us2_discover.feature  us3_resilience.feature
tests/integration/: announce_flow.rs  discover_flow.rs  dual_listener.rs  graceful_shutdown.rs  index_lan.rs  livechat.rs  outbound_only.rs  persona_lock.rs  platform_startup.rs  resilience.rs  scale.rs  thread_mock.rs
tests/steps/: keystore.rs  livechat.rs  outbound_only.rs  persona_selection.rs  security.rs  us1.rs  us2.rs  us3.rs
ui/: channels.html  index.html  livechat.html  peers.html  personas.html  settings.html
(+14 files in other folders)
