[package]
name = "peca-p2p-yp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
encoding_rs = "0.8.35"
igd-next = "0.17.1"
nostr = "0.44.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
windows = { version = "0.62.2", default-features = false }

[lints.rust]
warnings = "deny"

[dev-dependencies]
cucumber = "0.23.0"
tokio = { version = "1.52.3", features = ["full"] }

[[test]]
name = "cucumber"
harness = false
