[package]
name = "peca-p2p-yp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.9"
encoding_rs = "0.8.35"
igd-next = { version = "0.17.1", features = ["aio_tokio"] }
nostr = "0.44.4"
pulldown-cmark = "0.13"
rand = "0.9"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

[target.'cfg(unix)'.dependencies]
chacha20poly1305 = "0.10.1"
zeroize = "1"

[lints.rust]
warnings = "deny"

[dev-dependencies]
cucumber = "0.23.0"
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1.52.3", features = ["full", "test-util"] }

[[test]]
name = "cucumber"
harness = false

[[test]]
name = "gossip_frames"
path = "tests/contract/gossip_frames.rs"

[[test]]
name = "pex"
path = "tests/contract/pex.rs"

[[test]]
name = "local_api"
path = "tests/contract/local_api.rs"

[[test]]
name = "pcp_handshake"
path = "tests/contract/pcp_handshake.rs"

[[test]]
name = "event_30311"
path = "tests/contract/event_30311.rs"

[[test]]
name = "key_envelope"
path = "tests/contract/key_envelope.rs"

[[test]]
name = "event_validation"
path = "tests/contract/event_validation.rs"

[[test]]
name = "index_txt"
path = "tests/contract/index_txt.rs"

[[test]]
name = "cli_config"
path = "tests/contract/cli_config.rs"

[[test]]
name = "graceful_shutdown"
path = "tests/integration/graceful_shutdown.rs"

[[test]]
name = "platform_startup"
path = "tests/integration/platform_startup.rs"

[[test]]
name = "announce_flow"
path = "tests/integration/announce_flow.rs"

[[test]]
name = "discover_flow"
path = "tests/integration/discover_flow.rs"

[[test]]
name = "resilience"
path = "tests/integration/resilience.rs"

[[test]]
name = "outbound_only"
path = "tests/integration/outbound_only.rs"

[[test]]
name = "dual_listener"
path = "tests/integration/dual_listener.rs"

[[test]]
name = "scale"
path = "tests/integration/scale.rs"

[[test]]
name = "persona_lock"
path = "tests/integration/persona_lock.rs"

[[test]]
name = "index_lan"
path = "tests/integration/index_lan.rs"

[[test]]
name = "thread_mock"
path = "tests/integration/thread_mock.rs"
